--- a/src/style.css
+++ b/src/style.css
@@ -26,16 +26,15 @@ body {
   h1 {
     font-size: clamp(1.5rem, 2vw, 2rem);
   }
-  .panel h1 {
-    margin: calc(7.5vh / 2) 0;
-  }
   
-  .panel {
+  .side {
     display: flex;
     flex-flow: column nowrap;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 30vw;
+    min-width: 200px;
+    max-width: 300px;
+    width: 25vw;
     height: 100vh;
     background-color: var(--bg-light);
     box-sizing: border-box;
@@ -47,7 +46,7 @@ body {
     flex-flow: column nowrap;
     align-items: flex-start;
     justify-content: space-evenly;
-    /* width: clamp(1000px, 80vw, 2000px); */
+    width: 70vw;
     height: 100%;
   }
   .nav {
@@ -146,4 +145,8 @@ body {
 .priority-container {
   display: flex;
   flex-direction: row;
+}
+
+.disable {
+  display: none;
 }
